[build-system]
    requires = ["setuptools>=61.0.0", "numpy>=1.13.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "eoxmagmod"
    dynamic = ["version"]
    description="Geomagnetic model evaluation and Earth magnetic field utilities."
    authors = [
        {name = "Martin Paces", email = "martin.paces@eox.at"},
    ]
    license = "MIT"
    classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Operating System :: POSIX",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Utilities",
    ]
    requires-python = ">=3.10"
    dependencies = [
        "numpy>=1.13.0",
        "spacepy",
    ]

[tool.setuptools]
    include-package-data = false
    packages=[
        "eoxmagmod",
        "eoxmagmod.data",
        "eoxmagmod.tests",
        "eoxmagmod.tests.data",
        "eoxmagmod.magnetic_model",
        "eoxmagmod.magnetic_model.tests",
        "eoxmagmod.magnetic_model.tests.data",
    ]

[tool.setuptools.package-data]
    eoxmagmod = [
        "data/*",
        "tests/data/*.tsv",
        "magnetic_model/tests/data/*.txt",
        "magnetic_model/tests/data/*.cdf",
    ]

[tool.setuptools.dynamic]
    version = {attr = "eoxmagmod.__version__"}
